kubernetes/platform/messaging/kafka/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka
  labels:
    app.kubernetes.io/name: kafka

  annotations:
    argocd.argoproj.io/sync-wave: "-1"
